--- a/views/perfil.jade
+++ b/views/perfil.jade
@@ -1,4 +1,12 @@
 extends ./base.jade
+mixin perm(field,label)
+	p
+		&nbsp;
+		if field
+			span.fa.fa-check-square-o
+		else
+			span.fa.fa-square-o
+		strong &nbsp;&nbsp; #{label}
 
 block content
 	.page-header.text-center
@@ -6,6 +14,20 @@ block content
 			span.fa.fa-anchor
 			| &nbsp;Perfil do usuário
 		a.btn.btn-default.btn-sm(href="sair") Sair
+	.row
+		.col-sm-12
+			.well
+				h3
+					span.fa.fa-code
+					| &nbsp; Permiss&otilde;es
+				+perm(user.perm.basic,'Básico')
+				+perm(user.perm.pro,'Módulo Processos')
+				+perm(user.perm.proNew,'Novos Processos')
+				+perm(user.perm.cli,'Módulo Clientes')
+				+perm(user.perm.cliNew,'Novos Clientes')
+				+perm(user.perm.pte,'Módulo Partes')
+				+perm(user.perm.pteNew,'Nova Parte')
+				+perm(user.perm.mod,'Cadastro de Módulos')
 	.row
 		.col-sm-6
 			.well
