--- a/views/processos/form.jade
+++ b/views/processos/form.jade
@@ -1,8 +1,8 @@
 // [START form]
 extends ../base.jade
 
-apend scripts
-  script
+append scripts
+  script(src="/js/processos.js")
 
 block content
   h3 #{action} processo
@@ -13,9 +13,13 @@ block content
         input.form-control(type="text", name="numero", id="numero", value=item.numero)
     .form-group.row
       label.form-control-label.col-sm-2(for="numero") Acompanhamento:
-      .col-sm-10
+      .col-sm-4
         select.form-control(name="acomp", id="acomp")
               option(selected="true") #{item.acomp}
+      label.form-control-label.col-sm-2(for="natAcao") Natureza:
+      .col-sm-4
+        select.form-control(name="natAcao", id="natAcao")
+          option(selected="true") #{item.natAcao}
     .form-group.row
       label.form-control-label.col-sm-2(for="link") Link de acompanhamento:
       .col-sm-10
@@ -26,34 +30,38 @@ block content
         select.form-control(name="cliente", id="cliente")
                 option(selected="true") #{item.cliente}
     .form-group.row
-      label.form-control-label.col-sm-2(for="parteCliente") Parte cliente:
-      .col-sm-10
-        input.form-control(type="text", name="parteCliente", id="parteCliente", value=item.parteCliente)
-    .form-group.row
-      label.form-control-label.col-sm-2(for="parteContraria") Parte contrária:
-      .col-sm-10
-        input.form-control(type="text", name="parteContraria", id="parteContraria", value=item.parteContraria)
-    .form-group.row
-      label.form-control-label.col-sm-2(for="advogado") Advogado:
-      .col-sm-2
-        select.form-control(name="advogado", id="advogado", size="6", multiple="multiple")
-              option(selected="true") #{item.advogado}
-      .col-sm-2
-        p.form-control-text (Seleção múltipla. Segura ctrl ou command para selecionar mais de um)
-    .form-group.row
-      label.form-control-label.col-sm-2(for="responsavel") Responsável&#58;
-      .col-sm-2
-        select.form-control(name="responsavel", id="responsavel", size="6", multiple="multiple")
-              option(selected="true") #{item.responsavel}
-      .col-sm-2
-        p.form-control-text (Seleção múltipla. Segura ctrl ou command para selecionar mais de um)
-    hr
+        label.form-control-label.col-sm-2(for="parteCliente") Parte cliente:
+        .col-sm-4
+          select.form-control(name="parteCliente", id="parteCliente", size="6", multiple="multiple")
+            option(selected="true") #{item.parteCliente}
+        label.form-control-label.col-sm-2(for="parteContraria") Parte contrária:
+        .col-sm-4
+          select.form-control(name="parteContraria", id="parteContraria", size="6", multiple="multiple")
+            option(selected="true") #{item.parteContraria}
+      .form-group
+    .row
+      .form-group
+        label.form-control-label.col-sm-2(for="adv") Advogado:
+        .col-sm-2
+          select.form-control(name="adv", id="adv", size="6", multiple="multiple")
+                option(selected="true") #{item.adv}
+        .col-sm-2
+          p.form-control-text (Seleção múltipla. Segura ctrl ou command para selecionar mais de um)
+      
+        label.form-control-label.col-sm-2(for="resp") Responsável:
+        .col-sm-2
+          select.form-control(name="resp", id="resp", size="6", multiple="multiple")
+              option(selected="true") #{item.resp}
+        .col-sm-2
+          p.form-control-text (Seleção múltipla. Segura ctrl ou command para selecionar mais de um)
+    .row
+      hr
     .form-group.row
       h3 Escolha Estado (UF), Instância, Comarca e Vara (nessa ordem):
-      label.form-control-label.col-sm-2(for="estado") Estado (UF):
+      label.form-control-label.col-sm-2(for="uf") Estado (UF):
       .col-sm-2
-        select.form-control.col-sm-2(name="estado", id="estado")
-              option(selected="true") #{item.estado}
+        select.form-control.col-sm-2(name="uf", id="uf")
+              option(selected="true") #{item.uf}
     .form-group.row
       label.form-control-label.col-sm-2(for="comarca") Comarca:
       .col-sm-2
@@ -87,52 +95,55 @@ block content
       label.form-control-label.col-sm-2(for="observacoes") Observações
       .col-sm-10
         input.form-control(type="text", name="observacoes", id="observacoes", value=item.observacoes)
-  hr
-  h4 Andamentos do Processo n.º #{item.numero}
-  .table-responsive
-    table.table.table-striped.table-condensed
-      thead
-        tr
-          th #
-          th Data
-          th Tipo
-          th Andamento
-          th Relevante?
-          th Lançado por, em
-          th Modificado por, em
-          th Editar/Excluir
-      tbody
-        if !item.andamentos
-          td
-            p Nenhum andamento encontrado.
-        else
-          each andamento, i in item.andamentos
-            - i++
-              tr
-                td= i.toString()
-                td= andamento.data
-                td= andamento.tipo
-                td= andamento.conteudo
-                if (andamento.eRelevante)
-                  td Sim
-                else
-                  td Não
-                td Lançado por #{andamento.lancadoPor} em #{andamento.lancadoEm}
-                  | .
-                td Modificado por #{andamento.modificadoPor} em #{andamento.modificadoEm}
-                  | .
-                td
-        .btn-group
-          a(href="#", class='btn btn-primary btn-sm')
-            i.glyphicon.glyphicon-edit
-            span  Editar
-          a(href="#", class='btn btn-danger btn-sm')
-            i.glyphicon.glyphicon-trash
-            span  Excluir
-  hr
-  .form-group
-  .col-sm-offset-2
-    button.btn.btn-success.col-sm-2(type="submit") Salvar tudo
+    hr
+    h4 Andamentos do Processo n.º #{item.numero}
+    .table-responsive
+      table.table.table-striped.table-condensed
+        thead
+          tr
+            th #
+            th Data
+            th Tipo
+            th Andamento
+            th Relevante?
+            th Lançado por, em
+            th Modificado por, em
+            th Editar/Excluir
+        tbody
+          if !item.andamentos
+            td
+              p Nenhum andamento encontrado.
+          else
+            each andamento, i in item.andamentos
+              - i++
+                tr
+                  td= i.toString()
+                  td= andamento.data
+                  td= andamento.tipo
+                  td= andamento.conteudo
+                  if (andamento.eRelevante)
+                    td Sim
+                  else
+                    td Não
+                  td Lançado por #{andamento.lancadoPor} em #{andamento.lancadoEm}
+                    | .
+                  td Modificado por #{andamento.modificadoPor} em #{andamento.modificadoEm}
+                    | .
+                  td
+          .btn-group
+            a(href="#", class='btn btn-primary btn-sm')
+              i.glyphicon.glyphicon-edit
+              span  Editar
+            a(href="#", class='btn btn-danger btn-sm')
+              i.glyphicon.glyphicon-trash
+              span  Excluir
+    hr
+    .form-group
+    .col-sm-offset-2
+      button.btn.btn-success.col-sm-2(type="submit") Salvar tudo
+
+append footer-jquery
+  | carregarFiltros()
 
 // [END form]
 // LINK	ACOMP	NUM_PROC	CLIENTE	PARTE_CLIENTE	PARTE_EX	ADV	RESP	ESTADO	INST	COMARCA	NUM_VARA	NAT_VARA	NAT_ACAO	FASE	STATUS_ATUAL	AND_RELEVANTES	OBSERVACOES
